# raon_slm

./: .gitignore  README.md  pyproject.toml
src/slm_tokenizer/: __init__.py  build_pretrain_dataset.py  evaluate.py  generate.py  mlx_model.py  model.py  pretrain.py  pretrain_config.py  pretrain_data.py  torch_runtime.py  train_sentencepiece.py
src/slm_tokenizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/slm_tokenizer/backends/: __init__.py  base.py  factory.py  mlx_backend.py  torch_backend.py
